fix image not showing

--- a/css/style.css
+++ b/css/style.css
@@ -91,7 +91,7 @@ body {
 
 .hero-section { 
   
-    background-image: url(/image/kelas.jpg);
+    background-image: url(../image/kelas.jpg);
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
